// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/helm-values/extract extractPackageFile() extracts from complex values file correctly" 1`] = `
Object {
  "deps": Array [
    Object {
      "currentDigest": undefined,
      "currentValue": "11.6.0-debian-9-r0",
      "datasource": "docker",
      "depName": "bitnami/postgresql",
    },
    Object {
      "currentDigest": undefined,
      "currentValue": "0.7.0-debian-9-r12",
      "datasource": "docker",
      "depName": "docker.io/bitnami/postgres-exporter",
    },
    Object {
      "currentDigest": undefined,
      "currentValue": "11.5.0-debian-9-r0",
      "datasource": "docker",
      "depName": "docker.io/bitnami/postgresql",
    },
  ],
}
`;

exports[`lib/manager/helm-values/extract extractPackageFile() extracts from values.yaml correctly with same structure as "helm create" 1`] = `
Object {
  "deps": Array [
    Object {
      "currentDigest": undefined,
      "currentValue": "1.16.1",
      "datasource": "docker",
      "depName": "nginx",
    },
  ],
}
`;
